<resources>
    <string name="app_name">My Notes</string>
    <string name="day_of_week">Day of week:</string>
    <string name="add_note_button">add note button</string>
    <string name="enter_note_name">Enter note title...</string>
    <string name="enter_note_description">Enter note description...</string>
    <string name="high">High</string>
    <string name="normal">Normal</string>
    <string name="low">Low</string>
    <string name="add">Add</string>
    <string name="empty_fields_error">Fill all fields</string>
    <string-array name="DaysOfWeek">
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
        <item>Sunday</item>
    </string-array>
</resources>